crates/pg_syntax/tests/snapshots/postgres_regress/join@340.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select t1.* from\n  text_tbl t1\n  left join (select *, '***'::text as d1 from int8_tbl i8b1) b1\n    left join int8_tbl i8\n      left join (select *, null::int as d2 from int8_tbl i8b2, int4_tbl i4b2) b2\n      on (i8.q1 = b2.q1)\n    on (b2.d2 = b1.q2)\n  on (t1.f1 = b1.d1)\n  left join int4_tbl i4\n  on (i8.q2 = i4.f1);"
---
SelectStmt@0..316
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      AStar@10..11
        Ascii42@10..11 "*"
  Whitespace@11..12 " "
  From@12..16 "from"
  Newline@16..17 "\n"
  Whitespace@17..19 "  "
  JoinExpr@19..314
    JoinExpr@19..269
      RangeVar@19..30
        Ident@19..27 "text_tbl"
        Whitespace@27..28 " "
        Alias@28..30
          Ident@28..30 "t1"
      Newline@30..31 "\n"
      Whitespace@31..33 "  "
      Left@33..37 "left"
      Whitespace@37..38 " "
      Join@38..42 "join"
      Whitespace@42..43 " "
      Ascii40@43..44 "("
      JoinExpr@44..248
        RangeSubselect@44..94
          SelectStmt@44..90
            Select@44..50 "select"
            Whitespace@50..51 " "
            ResTarget@51..52
              ColumnRef@51..52
                AStar@51..52
                  Ascii42@51..52 "*"
            Ascii44@52..53 ","
            Whitespace@53..54 " "
            ResTarget@54..71
              TypeCast@54..65
                AConst@54..59
                  Sconst@54..59 "'***'"
                Typecast@59..61 "::"
                TypeName@61..65
                  TextP@61..65 "text"
              Whitespace@65..66 " "
              As@66..68 "as"
              Whitespace@68..69 " "
              Ident@69..71 "d1"
            Whitespace@71..72 " "
            From@72..76 "from"
            Whitespace@76..77 " "
            RangeVar@77..90
              Ident@77..85 "int8_tbl"
              Whitespace@85..86 " "
              Alias@86..90
                Ident@86..90 "i8b1"
          Ascii41@90..91 ")"
          Whitespace@91..92 " "
          Alias@92..94
            Ident@92..94 "b1"
        Newline@94..95 "\n"
        Whitespace@95..99 "    "
        Left@99..103 "left"
        Whitespace@103..104 " "
        Join@104..108 "join"
        Whitespace@108..109 " "
        JoinExpr@109..225
          RangeVar@109..120
            Ident@109..117 "int8_tbl"
            Whitespace@117..118 " "
            Alias@118..120
              Ident@118..120 "i8"
          Newline@120..121 "\n"
          Whitespace@121..127 "      "
          Left@127..131 "left"
          Whitespace@131..132 " "
          Join@132..136 "join"
          Whitespace@136..137 " "
          Ascii40@137..138 "("
          RangeSubselect@138..201
            SelectStmt@138..197
              Select@138..144 "select"
              Whitespace@144..145 " "
              ResTarget@145..146
                ColumnRef@145..146
                  AStar@145..146
                    Ascii42@145..146 "*"
              Ascii44@146..147 ","
              Whitespace@147..148 " "
              ResTarget@148..163
                TypeCast@148..157
                  AConst@148..152
                    NullP@148..152 "null"
                  Typecast@152..154 "::"
                  TypeName@154..157
                    IntP@154..157 "int"
                Whitespace@157..158 " "
                As@158..160 "as"
                Whitespace@160..161 " "
                Ident@161..163 "d2"
              Whitespace@163..164 " "
              From@164..168 "from"
              Whitespace@168..169 " "
              RangeVar@169..182
                Ident@169..177 "int8_tbl"
                Whitespace@177..178 " "
                Alias@178..182
                  Ident@178..182 "i8b2"
              Ascii44@182..183 ","
              Whitespace@183..184 " "
              RangeVar@184..197
                Ident@184..192 "int4_tbl"
                Whitespace@192..193 " "
                Alias@193..197
                  Ident@193..197 "i4b2"
            Ascii41@197..198 ")"
            Whitespace@198..199 " "
            Alias@199..201
              Ident@199..201 "b2"
          Newline@201..202 "\n"
          Whitespace@202..208 "      "
          On@208..210 "on"
          Whitespace@210..211 " "
          Ascii40@211..212 "("
          AExpr@212..225
            ColumnRef@212..217
              Ident@212..214 "i8"
              Ascii46@214..215 "."
              Ident@215..217 "q1"
            Whitespace@217..218 " "
            Ascii61@218..219 "="
            Whitespace@219..220 " "
            ColumnRef@220..225
              Ident@220..222 "b2"
              Ascii46@222..223 "."
              Ident@223..225 "q1"
        Ascii41@225..226 ")"
        Newline@226..227 "\n"
        Whitespace@227..231 "    "
        On@231..233 "on"
        Whitespace@233..234 " "
        Ascii40@234..235 "("
        AExpr@235..248
          ColumnRef@235..240
            Ident@235..237 "b2"
            Ascii46@237..238 "."
            Ident@238..240 "d2"
          Whitespace@240..241 " "
          Ascii61@241..242 "="
          Whitespace@242..243 " "
          ColumnRef@243..248
            Ident@243..245 "b1"
            Ascii46@245..246 "."
            Ident@246..248 "q2"
      Ascii41@248..249 ")"
      Newline@249..250 "\n"
      Whitespace@250..252 "  "
      On@252..254 "on"
      Whitespace@254..255 " "
      Ascii40@255..256 "("
      AExpr@256..269
        ColumnRef@256..261
          Ident@256..258 "t1"
          Ascii46@258..259 "."
          Ident@259..261 "f1"
        Whitespace@261..262 " "
        Ascii61@262..263 "="
        Whitespace@263..264 " "
        ColumnRef@264..269
          Ident@264..266 "b1"
          Ascii46@266..267 "."
          Ident@267..269 "d1"
    Ascii41@269..270 ")"
    Newline@270..271 "\n"
    Whitespace@271..273 "  "
    Left@273..277 "left"
    Whitespace@277..278 " "
    Join@278..282 "join"
    Whitespace@282..283 " "
    RangeVar@283..294
      Ident@283..291 "int4_tbl"
      Whitespace@291..292 " "
      Alias@292..294
        Ident@292..294 "i4"
    Newline@294..295 "\n"
    Whitespace@295..297 "  "
    On@297..299 "on"
    Whitespace@299..300 " "
    Ascii40@300..301 "("
    AExpr@301..314
      ColumnRef@301..306
        Ident@301..303 "i8"
        Ascii46@303..304 "."
        Ident@304..306 "q2"
      Whitespace@306..307 " "
      Ascii61@307..308 "="
      Whitespace@308..309 " "
      ColumnRef@309..314
        Ident@309..311 "i4"
        Ascii46@311..312 "."
        Ident@312..314 "f1"
  Ascii41@314..315 ")"
  Ascii59@315..316 ";"

