crates/pg_syntax/tests/snapshots/postgres_regress/join@342.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select t1.* from\n  text_tbl t1\n  left join (select *, '***'::text as d1 from int8_tbl i8b1) b1\n    left join int8_tbl i8\n      left join (select *, null::int as d2 from int8_tbl i8b2, int4_tbl i4b2\n                 where q1 = f1) b2\n      on (i8.q1 = b2.q1)\n    on (b2.d2 = b1.q2)\n  on (t1.f1 = b1.d1)\n  left join int4_tbl i4\n  on (i8.q2 = i4.f1);"
---
SelectStmt@0..347
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      AStar@10..11
        Ascii42@10..11 "*"
  Whitespace@11..12 " "
  From@12..16 "from"
  Newline@16..17 "\n"
  Whitespace@17..19 "  "
  JoinExpr@19..345
    JoinExpr@19..300
      RangeVar@19..30
        Ident@19..27 "text_tbl"
        Whitespace@27..28 " "
        Alias@28..30
          Ident@28..30 "t1"
      Newline@30..31 "\n"
      Whitespace@31..33 "  "
      Left@33..37 "left"
      Whitespace@37..38 " "
      Join@38..42 "join"
      Whitespace@42..43 " "
      Ascii40@43..44 "("
      JoinExpr@44..279
        RangeSubselect@44..94
          SelectStmt@44..90
            Select@44..50 "select"
            Whitespace@50..51 " "
            ResTarget@51..52
              ColumnRef@51..52
                AStar@51..52
                  Ascii42@51..52 "*"
            Ascii44@52..53 ","
            Whitespace@53..54 " "
            ResTarget@54..71
              TypeCast@54..65
                AConst@54..59
                  Sconst@54..59 "'***'"
                Typecast@59..61 "::"
                TypeName@61..65
                  TextP@61..65 "text"
              Whitespace@65..66 " "
              As@66..68 "as"
              Whitespace@68..69 " "
              Ident@69..71 "d1"
            Whitespace@71..72 " "
            From@72..76 "from"
            Whitespace@76..77 " "
            RangeVar@77..90
              Ident@77..85 "int8_tbl"
              Whitespace@85..86 " "
              Alias@86..90
                Ident@86..90 "i8b1"
          Ascii41@90..91 ")"
          Whitespace@91..92 " "
          Alias@92..94
            Ident@92..94 "b1"
        Newline@94..95 "\n"
        Whitespace@95..99 "    "
        Left@99..103 "left"
        Whitespace@103..104 " "
        Join@104..108 "join"
        Whitespace@108..109 " "
        JoinExpr@109..256
          RangeVar@109..120
            Ident@109..117 "int8_tbl"
            Whitespace@117..118 " "
            Alias@118..120
              Ident@118..120 "i8"
          Newline@120..121 "\n"
          Whitespace@121..127 "      "
          Left@127..131 "left"
          Whitespace@131..132 " "
          Join@132..136 "join"
          Whitespace@136..137 " "
          Ascii40@137..138 "("
          RangeSubselect@138..232
            SelectStmt@138..228
              Select@138..144 "select"
              Whitespace@144..145 " "
              ResTarget@145..146
                ColumnRef@145..146
                  AStar@145..146
                    Ascii42@145..146 "*"
              Ascii44@146..147 ","
              Whitespace@147..148 " "
              ResTarget@148..163
                TypeCast@148..157
                  AConst@148..152
                    NullP@148..152 "null"
                  Typecast@152..154 "::"
                  TypeName@154..157
                    IntP@154..157 "int"
                Whitespace@157..158 " "
                As@158..160 "as"
                Whitespace@160..161 " "
                Ident@161..163 "d2"
              Whitespace@163..164 " "
              From@164..168 "from"
              Whitespace@168..169 " "
              RangeVar@169..182
                Ident@169..177 "int8_tbl"
                Whitespace@177..178 " "
                Alias@178..182
                  Ident@178..182 "i8b2"
              Ascii44@182..183 ","
              Whitespace@183..184 " "
              RangeVar@184..197
                Ident@184..192 "int4_tbl"
                Whitespace@192..193 " "
                Alias@193..197
                  Ident@193..197 "i4b2"
              Newline@197..198 "\n"
              Whitespace@198..215 "                 "
              Where@215..220 "where"
              Whitespace@220..221 " "
              AExpr@221..228
                ColumnRef@221..223
                  Ident@221..223 "q1"
                Whitespace@223..224 " "
                Ascii61@224..225 "="
                Whitespace@225..226 " "
                ColumnRef@226..228
                  Ident@226..228 "f1"
            Ascii41@228..229 ")"
            Whitespace@229..230 " "
            Alias@230..232
              Ident@230..232 "b2"
          Newline@232..233 "\n"
          Whitespace@233..239 "      "
          On@239..241 "on"
          Whitespace@241..242 " "
          Ascii40@242..243 "("
          AExpr@243..256
            ColumnRef@243..248
              Ident@243..245 "i8"
              Ascii46@245..246 "."
              Ident@246..248 "q1"
            Whitespace@248..249 " "
            Ascii61@249..250 "="
            Whitespace@250..251 " "
            ColumnRef@251..256
              Ident@251..253 "b2"
              Ascii46@253..254 "."
              Ident@254..256 "q1"
        Ascii41@256..257 ")"
        Newline@257..258 "\n"
        Whitespace@258..262 "    "
        On@262..264 "on"
        Whitespace@264..265 " "
        Ascii40@265..266 "("
        AExpr@266..279
          ColumnRef@266..271
            Ident@266..268 "b2"
            Ascii46@268..269 "."
            Ident@269..271 "d2"
          Whitespace@271..272 " "
          Ascii61@272..273 "="
          Whitespace@273..274 " "
          ColumnRef@274..279
            Ident@274..276 "b1"
            Ascii46@276..277 "."
            Ident@277..279 "q2"
      Ascii41@279..280 ")"
      Newline@280..281 "\n"
      Whitespace@281..283 "  "
      On@283..285 "on"
      Whitespace@285..286 " "
      Ascii40@286..287 "("
      AExpr@287..300
        ColumnRef@287..292
          Ident@287..289 "t1"
          Ascii46@289..290 "."
          Ident@290..292 "f1"
        Whitespace@292..293 " "
        Ascii61@293..294 "="
        Whitespace@294..295 " "
        ColumnRef@295..300
          Ident@295..297 "b1"
          Ascii46@297..298 "."
          Ident@298..300 "d1"
    Ascii41@300..301 ")"
    Newline@301..302 "\n"
    Whitespace@302..304 "  "
    Left@304..308 "left"
    Whitespace@308..309 " "
    Join@309..313 "join"
    Whitespace@313..314 " "
    RangeVar@314..325
      Ident@314..322 "int4_tbl"
      Whitespace@322..323 " "
      Alias@323..325
        Ident@323..325 "i4"
    Newline@325..326 "\n"
    Whitespace@326..328 "  "
    On@328..330 "on"
    Whitespace@330..331 " "
    Ascii40@331..332 "("
    AExpr@332..345
      ColumnRef@332..337
        Ident@332..334 "i8"
        Ascii46@334..335 "."
        Ident@335..337 "q2"
      Whitespace@337..338 " "
      Ascii61@338..339 "="
      Whitespace@339..340 " "
      ColumnRef@340..345
        Ident@340..342 "i4"
        Ascii46@342..343 "."
        Ident@343..345 "f1"
  Ascii41@345..346 ")"
  Ascii59@346..347 ";"

