crates/pg_syntax/tests/snapshots/postgres_regress/join@344.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from\n  text_tbl t1\n  inner join int8_tbl i8\n  on i8.q2 = 456\n  right join text_tbl t2\n  on t1.f1 = 'doh!'\n  left join int4_tbl i4\n  on i8.q1 = i4.f1;"
---
SelectStmt@0..158
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Newline@13..14 "\n"
  Whitespace@14..16 "  "
  JoinExpr@16..157
    JoinExpr@16..114
      JoinExpr@16..69
        RangeVar@16..27
          Ident@16..24 "text_tbl"
          Whitespace@24..25 " "
          Alias@25..27
            Ident@25..27 "t1"
        Newline@27..28 "\n"
        Whitespace@28..30 "  "
        InnerP@30..35 "inner"
        Whitespace@35..36 " "
        Join@36..40 "join"
        Whitespace@40..41 " "
        RangeVar@41..52
          Ident@41..49 "int8_tbl"
          Whitespace@49..50 " "
          Alias@50..52
            Ident@50..52 "i8"
        Newline@52..53 "\n"
        Whitespace@53..55 "  "
        On@55..57 "on"
        Whitespace@57..58 " "
        AExpr@58..69
          ColumnRef@58..63
            Ident@58..60 "i8"
            Ascii46@60..61 "."
            Ident@61..63 "q2"
          Whitespace@63..64 " "
          Ascii61@64..65 "="
          Whitespace@65..66 " "
          AConst@66..69
            Iconst@66..69 "456"
      Newline@69..70 "\n"
      Whitespace@70..72 "  "
      Right@72..77 "right"
      Whitespace@77..78 " "
      Join@78..82 "join"
      Whitespace@82..83 " "
      RangeVar@83..94
        Ident@83..91 "text_tbl"
        Whitespace@91..92 " "
        Alias@92..94
          Ident@92..94 "t2"
      Newline@94..95 "\n"
      Whitespace@95..97 "  "
      On@97..99 "on"
      Whitespace@99..100 " "
      AExpr@100..114
        ColumnRef@100..105
          Ident@100..102 "t1"
          Ascii46@102..103 "."
          Ident@103..105 "f1"
        Whitespace@105..106 " "
        Ascii61@106..107 "="
        Whitespace@107..108 " "
        AConst@108..114
          Sconst@108..114 "'doh!'"
    Newline@114..115 "\n"
    Whitespace@115..117 "  "
    Left@117..121 "left"
    Whitespace@121..122 " "
    Join@122..126 "join"
    Whitespace@126..127 " "
    RangeVar@127..138
      Ident@127..135 "int4_tbl"
      Whitespace@135..136 " "
      Alias@136..138
        Ident@136..138 "i4"
    Newline@138..139 "\n"
    Whitespace@139..141 "  "
    On@141..143 "on"
    Whitespace@143..144 " "
    AExpr@144..157
      ColumnRef@144..149
        Ident@144..146 "i8"
        Ascii46@146..147 "."
        Ident@147..149 "q1"
      Whitespace@149..150 " "
      Ascii61@150..151 "="
      Whitespace@151..152 " "
      ColumnRef@152..157
        Ident@152..154 "i4"
        Ascii46@154..155 "."
        Ident@155..157 "f1"
  Ascii59@157..158 ";"

